# cookiecutter-python-lib

./: .gitignore  .travis.yml  README.rst  cookiecutter.json  requirements-test.txt  requirements.txt  test.bash  test.py
tests/: requirements.txt  test_template.py
{{cookiecutter.project_name}}/: .gitignore  README.rst  setup.py
{{cookiecutter.project_name}}/doc/: conf.py
{{cookiecutter.project_name}}/test/: requirements.txt  test_{{cookiecutter.lib_name}}.py
{{cookiecutter.project_slug}}/: .gitignore  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_slug}}/doc/: index.rst
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.lib_name}}/: __init__.py  __version__.py
{{cookiecutter.project_slug}}/test/: requirements.txt
{{cookiecutter.repo_name}}/: README.rst  requirements.txt  setup.py
{{cookiecutter.repo_name}}/doc/: Makefile  conf.py  make.bat
{{cookiecutter.repo_name}}/lib/{{cookiecutter.repo_name}}/: __init__.py  __version__.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __version__.py
{{cookiecutter.repo_name}}/test/: test_lib.py  test_{{cookiecutter.repo_name}}.py
